# minifb_raycaster

./: .gitignore  CMakeLists.txt  README.md
config/: textures.conf
include/: colors.h  raycaster.h
src/: input.c  perform_raycasting.c  raycaster.c  raycasting.c  sprites.c  texture.c  window.c  world_map.c  world_map.h
tests/: test1.c
